modifying the buy page

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -11,9 +11,9 @@
  						
  						<ul>
  						
- 							<li><a href="https://plus.google.com/105409988478789153320"><img src="http://idivehousing.com/i/social-google.png"/></a></li>
- 							<li><a href="http://www.facebook.com/idivehousing"><img src="http://idivehousing.com/i/social-facebook.png"/></a></li>
- 							<li><a href="https://twitter.com/idivehousing"><img src="http://idivehousing.com/i/social-twitter.png"/></a></li>
+ 							<!--li><a href="https://plus.google.com/105409988478789153320"><img src="/i/social-google.png"/></a></li-->
+ 							<li><a href="http://www.facebook.com/idivehousing"><img src="/i/social-facebook.png"/></a></li>
+ 							<li><a href="https://twitter.com/idivehousing"><img src="/i/social-twitter.png"/></a></li>
  									
  						</ul>
  					
@@ -23,9 +23,9 @@
  					
  						<ul>
  						
- 							<li><a href="http://idivehousing.com/features">Features</a></li>
- 							<li><a href="http://idivehousing.com/about">About</a></li>
- 							<li class="buy"><a href="http://idivehousing.com/buy">Buy</a></li>
+ 							<li><a href="/features">Features</a></li>
+ 							<li><a href="/about">About</a></li>
+ 							<li class="buy"><a href="/buy">Buy</a></li>
  									
  						</ul>
  					
