--- a/_includes/top.html
+++ b/_includes/top.html
@@ -2,7 +2,7 @@
  			
  				<div class="mini-container">
  				
- 					<div id="logo"><a href="http://idivehousing.com/"><img src="http://idivehousing.com/i/idive-logo.png" border="0"/></a></div>
+ 					<div id="logo"><a href="/"><img src="/i/idive-logo.png" border="0"/></a></div>
  					
  					<div id="tagline">To the Depths</div>
 
@@ -10,9 +10,9 @@
  						
  						<ul>
  						
- 							<li><a href="http://idivehousing.com/features">Features</a></li>
- 							<li><a href="http://idivehousing.com/about">About</a></li>
- 							<li class="buy"><a href="http://idivehousing.com/buy">Buy</a></li>
+ 							<li><a href="/features">Features</a></li>
+ 							<li><a href="/about">About</a></li>
+ 							<li class="buy"><a href="/buy">Buy</a></li>
  									
  						</ul>
  						
