fix the max height of the images

--- a/css/idive.css
+++ b/css/idive.css
@@ -95,6 +95,7 @@ body {
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	background-size:cover;
+	max-height: 900px;
 	background-image: url('../i/idive-home.jpg');
 	}
 
@@ -102,6 +103,7 @@ body {
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	background-size:cover;
+	max-height: 900px;
 	background-image: url('../i/idive-buy.jpg');
 	}
 	
