--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -25,7 +25,7 @@
  						
  							<li><a href="/features">Features</a></li>
  							<li><a href="/about">About</a></li>
- 							<li class="buy"><a href="/buy">Buy</a></li>
+ 							<li class="buy"><a href="http://shop.idivehousing.com">Buy</a></li>
  									
  						</ul>
  					
